# picar

./: .gitignore  README.md  client.html  pyproject.toml  start_br.sh  start_cs.sh
picar_core/: car_server.py  ws_control_bridge_webrtc.py
picar_core/control_app/: client.html  client.js  config.js  style.css
picar_core/linefollower_app/: line_config.json  linefollower.py
picar_core/pc/: pc_config.json  pc_server.py
picar_core/pi/: hardware.py  pi_config.json  pi_server.py  sensor.py  webrtc.py
tests/: esc_calibration.py  esc_test.py  hardware_test.py  server_test.py  servo_test.py  test_server.py
