[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picar"
version = "0.1.0"
description = "WebRTC controlled RC Car"
dependencies = [
    "aiortc==1.9.0",
    "aiohttp==3.9.5",
    "av==12.3.0",
    "websockets==16.0",
    "smbus2==0.6.0"
]

[tool.setuptools.packages.find]
include = ["picar_core*"]
